--- a/src/Eccube/Resource/template/default/Receiver/receiver_home.twig
+++ b/src/Eccube/Resource/template/default/Receiver/receiver_home.twig
@@ -9,24 +9,8 @@
 {% set body_class = ' ' %}
 {% block stylesheet %}
     <style type="text/css">
-        .image-box {
-            position: relative;
-        }
-
-        .image-box .unlike-icon {
-            display: none;
-            position: absolute;
-            bottom: 5%;
-            right: 5%;
-            z-index: 100;
-        }
-
-        .image-box .like-icon {
-            display: block;
-            position: absolute;
-            bottom: 5%;
-            right: 5%;
-            z-index: 99;
+        .product-section {
+            background-color: #FFFFFF;
         }
     </style>
 {% endblock stylesheet %}
@@ -50,28 +34,56 @@
 
 
             $('.like-icon').click(function() {
+                var unlike_icon = $(this).parent().find(".unlike-icon");
                 $.ajax({
                     url: "{{ url('receiver_favorite_action') }}",
                     type: "post",
                     dataType: 'json',
                     data: {'id' : $(this).data('id')}
                 }).done(function (data) {
-                    $(".like-icon").hide();
-                    $(".unlike-icon").show();
+                    if (data == true) {
+                        $(this).hide();
+                        $(unlike_icon).show();
+                    } else {
+                        alert("Has error!");
+                    }
                 });
             });
 
             $('.unlike-icon').click(function() {
+                var like_icon = $(this).parent().find(".like-icon");
+                var thumbnail = $(this).parents(".thumbnail");
+                var is_delete = $(this).data('delete');
                 $.ajax({
                     url: "{{ url('receiver_favorite_action') }}",
                     type: "post",
                     dataType: 'json',
-                    data: {'id' : $(this).data('id')}
+                    data: {'id' : $(this).data('id')},
                 }).done(function (data) {
-                    $(".unlike-icon").hide();
-                    $(".like-icon").show();
+                    if (data == true) {
+                        $(this).hide();
+                        $(like_icon).show();
+                        if (is_delete == true) {
+                            $(thumbnail).remove();
+                        }
+                    } else {
+                        alert('Has error!');
+                    }
                 });
             });
+
+            var section = '{{ app.request.get('section', '') }}';
+            if (section) {
+                $('#'+section+'-section').trigger('click');
+            }
+        });
+
+        $( document ).ajaxStart(function() {
+            $( ".overlay" ).show();
+        });
+
+        $( document ).ajaxComplete(function() {
+            $( ".overlay" ).hide();
         });
     </script>
 {% endblock %}
@@ -134,7 +146,7 @@
             {% if Products.totalItemCount > 0 %}
             <div class="row">
                 <div class="col-xs-12 col-sm-12">
-                        {% include "pagination.twig" with { 'pages' : Products.paginationData } %}
+                    {% include "pagination.twig" with { 'pages' : Products.paginationData } %}
                 </div>
             </div>
             {% endif %}
@@ -158,9 +170,53 @@
         <div class="favorite-section">
             <div class="row">
                 <div class="col-sm-12 col-xs-12">
-
+                {% if Favorites|length > 0 %}
+                    {% for FavoriteProduct in Favorites %}
+                        {% set Product = FavoriteProduct.Product %}
+                        {% set TargetCustomer = Product.Creator %}
+                        <div class="col-sm-3 col-xs-6 thumbnail" id="favorite_{{ FavoriteProduct.id }}">
+                            <div class="image-box">
+                                <a href="{{ url('farm_item_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}"/></a>
+                                <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/like-active.svg" class="unlike-icon display-block" data-id="{{ Product.id }}" data-delete="true">
+                            </div>
+                            <div class="caption">
+                                <h5 class="font-weight mg10">{{ Product.name }}</h5>
+                                <div class="row mg20">
+                                    <div class="col-sm-12 col-xs-12">
+                                        <div class="col-sm-6 col-xs-6">
+                                            <h5 class="font-weight">{{ Product.getPrice02IncTaxMin|price }}</h5>
+                                        </div>
+                                        <div class="col-sm-6 col-xs-6">
+                                            <h5 class="font-weight">{{ Product.getAmountFollowPrice02Min }} {{ Product.getAmountUnitTypeFollowPrice02Min.name }}箱</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                                <p>
+                                    <img src="{{ app.config.image_save_urlpath }}/{{ TargetCustomer.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
+                                    <span class="profile-name">{{ TargetCustomer.__toString }}</span>
+                                    <span class="profile-address">{{ TargetCustomer.Pref.name }}{{ TargetCustomer.addr01 }}{{ TargetCustomer.addr02 }}</span>
+                                </p>
+                            </div>
+                        </div>
+                    {% endfor %}
+                    {% else %}
+                        <div class="fav-empty">
+                            <p>
+                                <span>お気に入りに追加されている</span>
+                                <span>商品はありません</span>
+                            </p>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
+
+            {% if Favorites.totalItemCount > 0 %}
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12">
+                        {% include "pagination.twig" with { 'pages' : Favorites.paginationData, 'section' : 'favorite' } %}
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
