--- a/src/Eccube/Resource/template/default/Receiver/receiver_home.twig
+++ b/src/Eccube/Resource/template/default/Receiver/receiver_home.twig
@@ -163,6 +163,44 @@
         <div class="recommend-section">
             <div class="row">
                 <div class="col-sm-12 col-xs-12">
+                    {% if Recommends|length > 0 %}
+                        {% for Recommend in Recommends %}
+                            {% set Product = Recommend.Product %}
+                            {% set TargetCustomer = Product.Creator %}
+                            <div class="col-sm-3 col-xs-6 thumbnail">
+                                <div class="image-box">
+                                    <a href="{{ url('farm_item_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}"/></a>
+                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/like-inactive.svg" class="like-icon" data-id="{{ Product.id }}" {% if Product.isFavorite(Customer) %}style="display: none;"{% endif %}>
+                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/like-active.svg" class="unlike-icon" data-id="{{ Product.id }}" {% if Product.isFavorite(Customer) %}style="display: block;"{% endif %}>
+                                </div>
+                                <div class="caption">
+                                    <h5 class="font-weight mg10">{{ Product.name }}</h5>
+                                    <div class="row mg20">
+                                        <div class="col-sm-12 col-xs-12">
+                                            <div class="col-sm-6 col-xs-6">
+                                                <h5 class="font-weight">{{ Product.getPrice02IncTaxMin|price }}</h5>
+                                            </div>
+                                            <div class="col-sm-6 col-xs-6">
+                                                <h5 class="font-weight">{{ Product.getAmountFollowPrice02Min }} {{ Product.getAmountUnitTypeFollowPrice02Min.name }}箱</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p>
+                                        <img src="{{ app.config.image_save_urlpath }}/{{ TargetCustomer.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
+                                        <span class="profile-name">{{ TargetCustomer.__toString }}</span>
+                                        <span class="profile-address">{{ TargetCustomer.Pref.name }}{{ TargetCustomer.addr01 }}{{ TargetCustomer.addr02 }}</span>
+                                    </p>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        <div class="fav-empty">
+                            <p>
+                                <span>お気に入りに追加されている</span>
+                                <span>商品はありません</span>
+                            </p>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
