--- a/src/Eccube/Resource/template/default/Order/delivery.twig
+++ b/src/Eccube/Resource/template/default/Order/delivery.twig
@@ -36,20 +36,20 @@
     <div class="stepwizard">
         <div class="stepwizard-row">
             <div class="stepwizard-step">
-                <span class="circle-symbol color-primary">&#x25CF;</span>
-                <p class="color888 title12 color-primary">出荷登録</p>
+                <span class="circle-symbol">&#x25CF;</span>
+                <p class="color888 title12">出荷登録</p>
             </div>
             <div class="stepwizard-step">
                 <span class="circle-symbol">&#x25CF;</span>
                 <p class="color888 title12">集荷</p>
             </div>
             <div class="stepwizard-step">
-                <span class="circle-symbol">&#x25CF;</span>
-                <p class="title12 color888">配送</p>
+                <span class="circle-symbol color-primary">&#x25CF;</span>
+                <p class="title12 color-primary">配送</p>
             </div>
             <div class="stepwizard-step">
                 <span class="circle-symbol">&#x25CF;</span>
-                <p class="title12 color888">受領確認</p>
+                <p class="color888 title12">受領確認</p>
             </div>
         </div>
     </div>
@@ -57,8 +57,7 @@
 
     <div id="cart-confirm-main">
         <div class="title-section-medium">
-            <p class="title12">注文情報の確認をお願いします！</p>
-            <p class="title12">商品の準備ができたら出荷登録に進んでください</p>
+            <p class="title12">商品を集荷しました。ただいま配送中です！</p>
         </div>
 
         <div class="cart-content" id="cart-main-content3">
