--- a/src/Eccube/Resource/template/default/Receiver/receiver_home.twig
+++ b/src/Eccube/Resource/template/default/Receiver/receiver_home.twig
@@ -9,8 +9,37 @@
 {% set body_class = ' ' %}
 {% block stylesheet %}
     <style type="text/css">
-        .product-section {
-            background-color: #FFFFFF;
+        .product-section, .quick-section, .recommend-section, .favorite-section {
+            background-color: #f7f7f7;
+            min-height: 600px;
+        }
+
+        .fav-empty {
+            padding-top: 80px !important;
+            font-size: 18px !important;
+        }
+
+        /******************************
+            Media Query for tablet, PC...
+        *******************************/
+        @media only screen and (min-width: 768px) {
+            .thumbnail {
+                border: 1px solid #ddd !important;
+                height: 420px;
+            }
+            .thumbnail .main-img {
+                width: 345px;
+                height: 290px;
+            }
+        }
+        /******************************
+            Media Query for smart phone
+        *******************************/
+        @media only screen and (max-width: 767px) {
+            .thumbnail {
+                border: 1px solid #ddd !important;
+                height: 350px;
+            }
         }
     </style>
 {% endblock stylesheet %}
@@ -88,7 +117,7 @@
     </script>
 {% endblock %}
 {% block main %}
-    <div id="reicever-wrapper" class="wrapper container">
+    <div id="reicever-wrapper" class="wrapper">
         <div class="exhibition">
             <div class="row">
                 <div class="col-sm-12 col-xs-12">
@@ -110,7 +139,7 @@
                             {% set TargetCustomer = Product.Creator %}
                             <div class="col-sm-3 col-xs-6 thumbnail">
                                 <div class="image-box">
-                                <a href="{{ url('farm_item_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}"/></a>
+                                <a href="{{ url('farm_item_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}" class="main-img"/></a>
                                 <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/like-inactive.svg" class="like-icon" data-id="{{ Product.id }}" {% if Product.isFavorite(Customer) %}style="display: none;"{% endif %}>
                                 <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/like-active.svg" class="unlike-icon" data-id="{{ Product.id }}" {% if Product.isFavorite(Customer) %}style="display: block;"{% endif %}>
                                 </div>
@@ -137,7 +166,7 @@
                     {% else %}
                         <div class="fav-empty">
                             <p>
-                                <span class="title12 display-block">出品されている商品はありません</span>
+                                <span class="display-block">出品されている商品はありません</span>
                             </p>
                         </div>
                     {% endif %}
@@ -161,7 +190,7 @@
                             {% set TargetCustomer = Product.Creator %}
                             <div class="col-sm-3 col-xs-6 thumbnail">
                                 <div class="image-box">
-                                    <a href="{{ url('farm_item_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}"/></a>
+                                    <a href="{{ url('farm_item_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}" class="main-img"/></a>
                                     <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/like-inactive.svg" class="like-icon" data-id="{{ Product.id }}" {% if Product.isFavorite(Customer) %}style="display: none;"{% endif %}>
                                     <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/like-active.svg" class="unlike-icon" data-id="{{ Product.id }}" {% if Product.isFavorite(Customer) %}style="display: block;"{% endif %}>
                                 </div>
@@ -188,7 +217,7 @@
                     {% else %}
                         <div class="fav-empty">
                             <p>
-                                <span class="title12 display-block">出品されている商品はありません</span>
+                                <span class="display-block">出品されている商品はありません</span>
                             </p>
                         </div>
                     {% endif %}
@@ -214,7 +243,7 @@
                             {% set TargetCustomer = Product.Creator %}
                             <div class="col-sm-3 col-xs-6 thumbnail">
                                 <div class="image-box">
-                                    <a href="{{ url('farm_item_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}"/></a>
+                                    <a href="{{ url('farm_item_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}" class="main-img"/></a>
                                     <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/like-inactive.svg" class="like-icon" data-id="{{ Product.id }}" {% if Product.isFavorite(Customer) %}style="display: none;"{% endif %}>
                                     <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/like-active.svg" class="unlike-icon" data-id="{{ Product.id }}" {% if Product.isFavorite(Customer) %}style="display: block;"{% endif %}>
                                 </div>
@@ -241,8 +270,7 @@
                     {% else %}
                         <div class="fav-empty">
                             <p>
-                                <span>お気に入りに追加されている</span>
-                                <span>商品はありません</span>
+                                <span class="display-block">おすすめ商品がありません</span>
                             </p>
                         </div>
                     {% endif %}
@@ -259,7 +287,7 @@
                         {% set TargetCustomer = Product.Creator %}
                         <div class="col-sm-3 col-xs-6 thumbnail" id="favorite_{{ FavoriteProduct.id }}">
                             <div class="image-box">
-                                <a href="{{ url('farm_item_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}"/></a>
+                                <a href="{{ url('farm_item_detail', {'id': Product.id} ) }}"><img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}" class="main-img"/></a>
                                 <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/like-active.svg" class="unlike-icon display-block" data-id="{{ Product.id }}" data-delete="true">
                             </div>
                             <div class="caption">
@@ -285,8 +313,8 @@
                     {% else %}
                         <div class="fav-empty">
                             <p>
-                                <span>お気に入りに追加されている</span>
-                                <span>商品はありません</span>
+                                <span class="display-block">お気に入りに追加されている</span>
+                                <span class="display-block">商品はありません</span>
                             </p>
                         </div>
                     {% endif %}
