--- a/src/Eccube/Resource/template/default/Farm/farm_item_detail.twig
+++ b/src/Eccube/Resource/template/default/Farm/farm_item_detail.twig
@@ -12,6 +12,11 @@
         #order_button {
             width: 92% !important;
         }
+
+        textarea {
+            height: 80px !important;
+            margin-top: 20px;
+        }
     </style>
 {% endblock stylesheet %}
 
@@ -141,11 +146,40 @@
                 priceSpan.text(priceNew);
                 $button.parent().find("input").val(newVal);
             });
+
+            $("#pc-detail-rate img").click(function () {
+                var customer_role = $('#customer_role').val();
+                if (customer_role == "role_receiver") {
+                    var ajaxData = {};
+                    ajaxData.product_id = $("#product_id").val();
+                    ajaxData.type = $(this).attr('like-type');
+                    var like_count = $(this).parent().find('span.display-block');
+                    var count = parseInt(like_count.text(), 10) + 1;
+                    like_count.text(count);
+                    $.ajax({
+                        url: '{{ url('farm_count_like') }}',
+                        type: 'POST',
+                        dataType: 'json',
+                        data: ajaxData
+                    }).done(function(data){
+
+                        //$('body').prepend(data);
+                    }).fail(function(data){
+                    });
+                }
+            });
         });
     </script>
 {% endblock %}
 
 {% block main %}
+    <input type="hidden" value="{{ Product.id }}" id="product_id">
+
+    {% if is_granted("ROLE_RECIPIENT") %}
+        <input type="hidden" value="role_receiver" id="customer_role">
+    {% else %}
+        <input type="hidden" value="role_farmer" id="customer_role">
+    {% endif %}
     {% set TargetCustomer = Product.Creator %}
     <div id="reicever-wrapper" class="wrapper">
         <div class="wrapper">
@@ -234,41 +268,35 @@
                         <div id="pc-detail-rate">
                             <ul class="list-inline">
                                 <li class="list-group-item">
-                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/rate-like.svg" class="display-block">
+                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/rate-like.svg" class="display-block" like-type="like_count">
                                     <span class="pc-rate-des">ありがとう</span>
                                     <span class="display-block">
-                                        {% if ProductRate is not empty %}
-                                            {{ Product.ProductRate.like_count }}
-                                        {% endif %}
+                                            {{ Product.ProductRate.like_count|default(0) }}
                                     </span>
                                 </li>
                                 <li class="list-group-item">
-                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/rate-tasty.svg" class="display-block">
+                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/rate-tasty.svg" class="display-block" like-type="delicious_count">
                                     <span class="pc-rate-des">おいしい</span>
                                     <span class="display-block">
-                                        {% if ProductRate is not empty %}
                                         {{ Product.ProductRate.delicious_count|default(0) }}
-                                        {% endif %}
                                     </span>
                                 </li>
                                 <li class="list-group-item">
-                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/rate-freshness.svg" class="display-block">
+                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/rate-freshness.svg" class="display-block" like-type="fresh_count">
                                     <span class="pc-rate-des">新鮮</span>
                                     <span class="display-block">
-                                        {% if ProductRate is not empty %}
                                         {{ Product.ProductRate.fresh_count|default(0) }}
-                                        {% endif %}
                                     </span>
                                 </li>
                                 <li class="list-group-item">
-                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/rate-vivid.svg" class="display-block">
+                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/rate-vivid.svg" class="display-block" like-type="vivid_count">
                                     <span class="pc-rate-des">色あざやか</span>
-                                    <span class="display-block">{% if ProductRate is not empty %}{{ Product.ProductRate.vivid_count|default(0) }}{% endif %}</span>
+                                    <span class="display-block">{{ Product.ProductRate.vivid_count|default(0) }}</span>
                                 </li>
                                 <li class="list-group-item">
-                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/rate-smell.svg" class="display-block">
+                                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/rate-smell.svg" class="display-block" like-type="aroma_count">
                                     <span class="pc-rate-des">香りがよい</span>
-                                    <span class="display-block">{% if ProductRate is not empty %}{{ Product.ProductRate.aroma_count|default(0) }}{% endif %}</span>
+                                    <span class="display-block">{{ Product.ProductRate.aroma_count|default(0) }}</span>
                                 </li>
                             </ul>
                         </div>
@@ -285,7 +313,7 @@
                                 <form name="comment" id="comment" method="post" action="?" enctype="multipart/form-data">
                                     <input type="hidden" name="mode" value="add_voice"/>
                                     {{ form_widget(form._token) }}
-                                    <div class="col-sm-12 col-xs-12 margin-bottom10">
+                                    <div class="col-sm-12 col-xs-12 margin-bottom10 margin-top15">
                                         {{ form_widget(form.comment, {attr: {placeholder: 'コメントを入力。。。'}}) }}
                                         <div class="help">
                                             <span class="farmer-comment-text-limit color888">200</span>
