--- a/src/Eccube/Resource/template/default/Receiver/receiver_search.twig
+++ b/src/Eccube/Resource/template/default/Receiver/receiver_search.twig
@@ -12,8 +12,11 @@
     <script type="text/javascript">
         $(function () {
             $(".list-group-item").click(function () {
-                var value = $(this).find('input').val();
+                var value = $(this).find("input[name=search_type]").val();
                 $("#search_type").val(value);
+                if (value == '{{ constant('Eccube\\Entity\\Master\\SearchType::SEARCH_HISTORY') }}') {
+                    $('#search-form').find("input[name=name]").val($(this).find("input[name=name]").val());
+                }
                 $("#search-form").submit();
             });
         });
@@ -26,13 +29,26 @@
             <input type="hidden" id="search_type" name="search_type" value="">
         </form>
         <ul class="list-group">
-            {% for item in form.search_type.vars.choices %}
+            {% for key, item in types %}
             <li class="list-group-item">
-                <input type="hidden" name="search_type" value="{{ item.value }}">
-                {{ item.label }}
+                <input type="hidden" name="search_type" value="{{ key }}">
+                {{ item }}
                 <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
             </li>
             {% endfor %}
+            {% if history_type is not empty %}
+                <li class="list-group-item">
+                    検索履歴
+                </li>
+            {% for item in history_type %}
+                <li class="list-group-item">
+                    <input type="hidden" name="search_type" value="{{ constant('Eccube\\Entity\\Master\\SearchType::SEARCH_HISTORY') }}">
+                    <input type="hidden" name="name" value="{{ item }}">
+                    {{ item }}
+                    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
+                </li>
+            {% endfor %}
+            {% endif %}
         </ul>
     </div>
 {% endblock main %}
